--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<h1> style="font-size:40px;color:green;"> Website Under Construction... </h1>
-
+<h1 style="font-size:40px;color:green;">This text is 40 pixels and green.</h1>
