--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-h1 {text-align: center;}
-<h1 style="font-size:40px;color:green;">Website Under Construction...</h1>
+<center> <h1 style="font-size:40px;color:green;">Website Under Construction...</h1> </center>
