--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<center> <h1 style="font-size:40px;color:green;">Website Under Construction...</h1> </center>
+<center> <h1 style="font-size:40px;color:pink;">Website Under Construction...</h1> </center>
