--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<center> <h1 style="font-size:40px;color:blue;">Website Under Construction...</h1> </center>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+   <meta charset="utf-8">
+   <title>Sammy’s First Website</title>
+</head>
+  
+<body>
+   <center> <h1 style="font-size:40px;color:blue;">Website Under Construction...</h1> </center>
+</body>  
+
+
