--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
    <meta charset="utf-8">
-   <title>Sammy’s First Website</title>
+   <title>Angel's Website</title>
 </head>
   
 <body>
