--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   
 <body>
    <center> <h1 style="font-size:40px;color:blue;">Website Under Construction...</h1> </center>
+   <img src="unsplash-forest.jpg">
 </body>  
 
 </html>
