--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
   
 <body>
-   <center> <h1 style="font-size:40px;color:blue;">Website Under Construction...</h1> </center>
-   <img src="unsplash-forest.jpg">
+   #<center> <h1 style="font-size:40px;color:blue;">Website Under Construction...</h1> </center>
+   <!--First section-->
+   <div style="background-image: unsplash-forest.jpg;
+   background-size: cover; height:480px; padding-top:80px;">
+   </div>
 </body>  
 
 </html>
