--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <!-- <center> <h1 style="font-size:40px;color:blue;">Website Under Construction...</h1> </center> -->
    
    <!--First section-->
-   <div style="background-image: background-image.jpg;
+   <div style="background-image: url(background-image.jpg);
    background-size: cover; height:480px; padding-top:80px;">
    </div>
 </body>  
