--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title>Website</title>
 </head>
   
-<body>
+<body style=“margin:0;”>
    <!-- <center> <h1 style="font-size:40px;color:blue;">Website Under Construction...</h1> </center> -->
    
    <!--First section-->
