--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
 </head>
   
 <body style=“margin:0;”>
-   <!-- <center> <h1 style="font-size:40px;color:blue;">Website Under Construction...</h1> </center> -->
-   
    <!--First section-->
    <div style="background-image: url(background-image.jpg);
-   background-size: cover; height:480px; padding-top:80px;">
+   background-size: cover; height:480px;">
    </div>
 </body>  
 
