--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
    <title>Website</title>
 </head>
   
-<body style=“margin:0;”>
+<body>
+   margin: 0;
    <!--First section-->
    <div style="background-image: url(background-image.jpg);
    background-size: cover; height:480px;">
