--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title>Website</title>
 </head>
   
-<body>
+<body style=“margin:0;”>
    margin: 0;
    <!--First section-->
    <div style="background-image: url(background-image.jpg);
