--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style=“margin:0;”>
    <!--First section-->
    <div style="background-image: url(background-image.jpg);
-   background-size: cover; height:480px; padding-top:80px;">
+   background-size: cover; height:480px; padding-top:80px; margin:0;">
    </div>
 </body>  
 
