--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <!--First section-->
    <div style="background-image: url(background-image.jpg);
    background-size: cover; height:480px; padding-top:80px; margin:0;">
+      <h1 style="font-size:100px; color:white; margin:10px;">Website</h1>   
    </div>
 </body>  
 
