--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    <!--First section-->
    <div style="background-image: url(background-image.jpg);
    background-size: cover; height:480px; padding-top:80px; margin:0px;">
-      <h1 style="font-size:100px; color:white; margin:0px; text-align: center;">Website Under Construction...</h1>   
-      <p style="font-size:30px; color: white; margin:20px;"><em>This is a website I'm working on to learn HTML</em></p>
+      <h1 style="font-size:100px; color:white; text-align:center;">Website Under Construction...</h1>   
+      <p style="font-size:30px; color: white; text-align:center;"><em>This is a website I'm working on to learn HTML</em></p>
       
    </div>
 </body>  
