--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
    background-size: cover; height:480px; padding-top:80px; margin:0px; text-align:center;">
       <h1 style="font-size:100px; color:white;">Website Under Construction...</h1>   
       <p style="font-size:30px; color: white;"><em>This is a website I'm working on to learn HTML</em></p>
-      
    </div>
+   <!--Footer-->
+   <footer style="height:auto; background-color:#5e644f;">
+      <h1><Made by Angel S</h1>
+   </footer>
 </body>  
 
 </html>
