--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    </div>
    <!--Footer-->
    <footer style="height:auto; background-color:#5e644f;">
-      <h1><Made by Angel S</h1>
+      <h1>Made by Angel S</h1>
    </footer>
 </body>  
 
