--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
    <div style="background-image: url(background-image.jpg);
    background-size: cover; height:480px; padding-top:80px; margin:0px; text-align:center;">
       <h1 style="font-size:100px; color:white;">Website Under Construction...</h1>   
-      <p style="font-size:30px; color: white;"><em>This is a website I'm working on to learn HTML</em></p>
+      <p style="font-size:30px; color:white;"><em>This is a website I'm working on to learn HTML</em></p>
    </div>
    <!--Footer-->
-   <footer style="height:auto; background-color:#5e644f;">
-      <h1>Made by Angel S</h1>
+   <footer style="height:auto; background-color:#5e644f; text-aligh:center;">
+      <h1 style ="font-size:10px; color:white;">Made by Angel S</h1>
    </footer>
 </body>  
 
