--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <p style="font-size:30px; color:white;"><em>This is a website I'm working on to learn HTML</em></p>
    </div>
    <!--Footer-->
-   <footer style="height:auto; background-color:#5e644f; text-aligh:center;">
-      <h1 style ="font-size:10px; color:white;">Made by Angel S</h1>
+   <footer style="height:auto; background-color:#5e644f; text-align:center;">
+      <h1 style ="font-size:25px; color:white;">Made by Angel S</h1>
    </footer>
 </body>  
 
