--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body style=“margin:0;”>
    <!--First section-->
    <div style="background-image: url(background-image.jpg);
-   background-size: cover; height:480px; padding-top:80px; margin:0px; text-align:center;">
+   background-size: cover; height:480px; padding-top:80px; text-align:center;">
       <h1 style="font-size:100px; color:white;">Website Under Construction...</h1>   
       <p style="font-size:30px; color:white;"><em>This is a website I'm working on to learn HTML</em></p>
    </div>
    <!--Footer-->
    <footer style="height:auto; background-color:#5e644f; text-align:center;">
-      <h1 style ="font-size:20px; color:white;">Made by Angel S</h1>
+      <h1 style ="font-size:18px; color:white;">Made by Angel S</h1>
    </footer>
 </body>  
 
