--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
    <meta charset="utf-8">
    <title>Website</title>
+   <link rel="stylesheet" href="style.css">
 </head>
   
 <body style=“margin:0; padding”>
