--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
    <link rel="stylesheet" href="style.css">
 </head>
   
-<body style=“margin:0; padding”>
+<body style=“margin:0; padding:0;”>
    <!--First section-->
-   <div style="background-image: url(background-image.jpg);
+   <div1 style="background-image: url(background-image.jpg);
    background-size: cover; height:480px; padding-top:80px; text-align:center;">
       <h1 style="font-size:100px; color:white;">Website Under Construction...</h1>   
       <p style="font-size:30px; color:white;"><em>This is a website I'm working on to learn HTML</em></p>
-   </div>
+   </div1>
 </body>  
 
 </html>
