--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
    <link rel="stylesheet" href="style.css">
 </head>
   
-<body style=“margin:0; padding:0;”>
+<body style=“margin:0px;”>
    <!--First section-->
    <div 1 style="background-image: url(background-image.jpg);
    background-size: cover; height:480px; padding-top:80px; text-align:center;">
-      <h1 style="font-size:100px; color:white;">Website Under Construction...</h1>   
+      <h1>Website Under Construction...</h1>   
       <p style="font-size:30px; color:white;"><em>This is a website I'm working on to learn HTML</em></p>
    </div 1>
 </body>  
