--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
    <!--First section-->
    <div 1 style="background-image: url(background-image.jpg);
    background-size:cover; height:480px; padding-top:80px; text-align:center;">
-      <h style="font-size:100px; color:white;">Website Under Construction...</h>   
-      <p style="font-size:30px; color:white;"><em>This is a website I'm working on to learn HTML</em></p>
+      <h style="font-size:100px; color:blue;">Website Under Construction...</h>   
+      <p style="font-size:30px; color:blue;"><em>This is a website I'm working on to learn HTML</em></p>
    </div 1>
 </body>  
 
