--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <title>Website</title>
    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
    <link rel="stylesheet" href="style.css">
+   <script src = "script.js" type = "text/javascript"/></script>
 </head>
   
 <body style=“margin:0px;”>
