--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
    <!--First section-->
    <div 1 style="background-image: url(background-image.jpg);
    background-size:cover; height:480px; padding-top:80px; text-align:center;">
-      <h style="font-size:100px; color:purple;">Website Under Construction...</h>   
-      <p style="font-size:30px; color:purple;"><em>This is a website I'm working on to learn HTML</em></p>
+      <h style="font-size:100px; color:white;">Website Under Construction...</h>   
+      <p style="font-size:30px; color:white;"><em>This is a website I'm working on to learn HTML</em></p>
       <input type = "button" onclick = "myFunction();" name = "okay" value = "Click"> </input>
    </div 1>
 </body>  
