--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    background-size:cover; height:480px; padding-top:80px; text-align:center;">
       <h style="font-size:100px; color:white;">Website Under Construction...</h>   
       <p style="font-size:30px; color:white;"><em>This is a website I'm working on to learn HTML</em></p>
-      <input type = "button" onclick = "myFunction();" name = "okay" value = "Click"> </input>
+      <input type = "button" onclick = "Website_Info();" name = "okay" value = "Click"> </input>
    </div 1>
 </body>  
 
