--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    background-size:cover; height:480px; padding-top:80px; text-align:center;">
       <h style="font-size:80px; color:white;">Website Under Construction...</h>   
       <p align="center"> 
-         <input type = "button" onclick = "websiteInfo();" name = "okay" value = "Info"> </input> 
+         <input type = ".button" onclick = "websiteInfo();" name = "okay" value = "Info"> </input> 
       </p>
    </div 1>
 </body>  
