--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <title>Website</title>
-   <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
    <script src = "script.js" type = "text/javascript"/></script>
 </head>
@@ -12,10 +12,10 @@
 <body style=“margin:0px;”>
    <!--First section-->
    <div 1 style="background-image: url(background-image.jpg);
-   background-size:cover; height:480px; padding-top:80px; text-align:center;">
+   background-size:cover; height:100%; padding-top:80px; text-align:center;">
       <h style="font-size:80px; color:white;">Website Under Construction...</h>   
       <p align="center"> 
-         <input type = ".button" onclick = "websiteInfo();" name = "okay" value = "Info"> </input> 
+         <input type = "button" onclick = "websiteInfo();" name = "okay" value = "Info"> </input> 
       </p>
    </div 1>
 </body>  
