--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body style=“margin:0px;”>
    <!--First section-->
    <div 1 style="background-image: url(background-image.jpg);
-   background-size:cover; height:100%; padding-top:80px; text-align:center;">
+   background-size:cover; height:800px; padding-top:80px; text-align:center;">
       <h style="font-size:80px; color:white;">Website Under Construction...</h>   
       <p align="center"> 
          <input type = "button" onclick = "websiteInfo();" name = "okay" value = "Info"> </input> 
